# discord-bot

./: .env.example  .gitignore  .mise.toml  CHANGELOG.md  Dockerfile  LICENSE  README.md  bot.py  db.sql  docker-compose.dev.full.yaml  docker-compose.yml  pyproject.toml  requirements.txt  welcome_rules.md
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  docker-build.yml  release-please.yml
cogs/: __init__.py  admin.py  announcement.py  coordination.py  core_roles.py  events.py  faq.py  fastapi.py  member.py  mentors.py  publisher.py  roles.py  staffer.py  staffing.py  staffings.py  station_prefix.py  tasks.py  update_countries_message.py  update_message.py  update_messages.py  update_notification_message.py  update_welcome_message.py  vtc.py
core/: __init__.py  exceptions.py  logging.py
db/: db.sql
helpers/: __init__.py  api.py  booking.py  config.py  database.py  db.py  error.py  event.py  faq.py  handler.py  member_cache.py  members.py  mentor.py  message.py  roles.py  select.py  staffing.py  staffing_async.py  staffing_db.py  ux.py
helpers/staffings/: messages.py
messages/: countries.md  faq_atc.md  faq_visiting.md  faq_waiting.md  notification.md  notification_message.md  rules.md  welcome.md  welcome_rules.md
services/: controlcenter.py  events.py  vatsim.py
tests/: test_handler.py  test_logging.py  test_roles.py
