[project]
name = "discord-bot"
version = "2.0.0"
description = "A Discord bot for VATSIM Scandinavia that verifies members, posts events, creates staffing threads, updates rules, and performs other miscellaneous tasks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "discord==1.7.3",
    "discord-py==2.4.0",
    "emoji==2.12.1",
    "markdownify==0.13.1",
    "mysql-connector-python==9.0.0",
    "mysql-connector-repackaged==0.3.1",
    "pydantic>=2.10.5",
    "python-dotenv==1.0.1",
    "python-version==0.0.2",
    "requests==2.32.3",
    "sentry-sdk==2.13.0",
    "setuptools==74.1.2",
    "typing-extensions==4.12.2",
    "websockets==13.0.1",
]
