[project]
name = "discord-bot"
version = "2.4.0"
description = "A Discord bot for VATSIM Scandinavia that verifies members, posts events, creates staffing threads, updates rules, and performs other miscellaneous tasks."
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "audioop-lts>=0.2.1 ; python_full_version >= '3.13'",
    "discord==1.7.3",
    "discord-py==2.4.0",
    "emoji==2.12.1",
    "markdownify==0.13.1",
    "mysql-connector-python==9.0.0",
    "mysql-connector-repackaged==0.3.1",
    "pydantic>=2.10.5",
    "python-dotenv==1.0.1",
    "python-version==0.0.2",
    "requests==2.32.3",
    "sentry-sdk==2.13.0",
    "setuptools==74.1.2",
    "typing-extensions==4.12.2",
    "websockets==13.0.1",
    "uvicorn==0.34.0",
    "fastapi==0.115.8",
    "python-multipart==0.0.20",
    "aiofiles>=24.1.0",
    "structlog>=25.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff.lint]
extend-select = [
    "TRY", # enable tryceratops
    "FLY", # enable flynt
    # TODO: evaluate whether this is sustainable
    "ALL", # enable all the checks
]
ignore = [
    # formatter incompatibilities
    "D203", "D211", "D212", "COM812", "Q000", "Q003", "E501",
    "ANN", # type annotations missing
    "FA100", # future rewritable type is fine to ignore
    "FIX", # todos, fixmes, etc. are useful
    "TD003", # We don't need a link for all todos, they're future context
    # TODO: list of ignored errors we must fix
    "T201",
    "D102",
    "D100",
    "INP001",
    "D103",
    "D401",
    "PLW1508",
    "D101",
    "D107",
    "SLF001",
    "BLE001",
    "N806",
    "D205",
    "S608",
    "FBT002",
    "D400",
    "D415",
    "DTZ005",
    "EM101",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "FBT003",
    "PLW0603",
    "ASYNC210",
    "S113",
    "SIM113",
    "A002",
    "ARG001",
    "ARG002",
    "C901",
    "N818",
    "PERF203",
    "PLR0915",
    "TRY301",
    "FBT001",
    "SIM108",
    "SIM117",
    "PTH123",
    "PLR0912",
    "RUF006",
    "TRY002",
    "TRY300",
]
unfixable = [
    "T20", # print() needs manual fixing
    "EM" # easy to not notice the autofix
]

[tool.ruff.format]
quote-style = "single"
