[project]
name = "discord-bot"
version = "2.5.3"
description = "A Discord bot for VATSIM Scandinavia that verifies members, posts events, creates staffing threads, updates rules, and performs other miscellaneous tasks."
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "discord-py==2.7.1",
    "emoji==2.15.0",
    "fastapi==0.135.3",
    "python-dotenv==1.2.2",
    "python-multipart>=0.0.22",
    "sentry-sdk==2.57.0",
    "structlog>=25.5.0",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=9.0.2",
    "ruff>=0.9.3",
]

[tool.ruff.lint]
extend-select = [
    "TRY", # enable tryceratops
    "FLY", # enable flynt
    # TODO: evaluate whether this is sustainable
    "ALL", # enable all the checks
]
ignore = [
    # formatter incompatibilities
    "D203", "D211", "D212", "COM812", "Q000", "Q003", "E501",
    "ANN", # type annotations missing
    "FA100", # future rewritable type is fine to ignore
    "FIX", # todos, fixmes, etc. are useful
    "TD003", # We don't need a link for all todos, they're future context
    # TODO: list of ignored errors we must fix
    "T201",
    "D102",
    "D100",
    "INP001",
    "D103",
    "D401",
    "PLW1508",
    "D101",
    "D107",
    "SLF001",
    "BLE001",
    "N806",
    "D205",
    "S608",
    "FBT002",
    "D400",
    "D415",
    "DTZ005",
    "EM101",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "FBT003",
    "PLW0603",
    "ASYNC210",
    "S113",
    "SIM113",
    "A002",
    "ARG001",
    "ARG002",
    "C901",
    "N818",
    "PERF203",
    "PLR0915",
    "TRY301",
    "FBT001",
    "SIM108",
    "SIM117",
    "PTH123",
    "PLR0912",
    "RUF006",
    "TRY002",
    "TRY300",
]
unfixable = [
    "T20", # print() needs manual fixing
    "EM" # easy to not notice the autofix
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "single"

[tool.deptry.per_rule_ignores]
DEP002 = ["python-multipart"]

[tool.deptry.package_module_name_map]
discord-py = "discord"
python-dotenv = "dotenv"
